<resources>
    <string name="app_name">TripToGo</string>
    <string name="distancia">Distância</string>
    <string name="preco">Preço</string>
    <string name="autonomia">Autonomia</string>
    <string name="moeda">R$</string>
    <string name="valor_padrao">0,00</string>
    <string name="calcular">Calcular</string>
    <string name="ida_e_volta">Ida e Volta</string>
    <string name="km">Km</string>
    <string name="r_por_litro">R$ por litro</string>
    <string name="l_por_km">L por Km</string>
    <string name="title_activity_maps">Maps</string>
    <string name="maps">Maps</string>
</resources>
