<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:text="@string/distancia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/tbDistancia"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503" android:hint="Km"/>
    <TextView
            android:text="@string/preco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/tbDistancia" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp" app:layout_constraintHorizontal_bias="0.501"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/tbPreco"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.503" android:hint="R$ por litro"/>
    <TextView
            android:text="@string/autonomia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/tbPreco" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp" app:layout_constraintHorizontal_bias="0.514"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/tbAutonomia"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503" android:hint="L por Km"/>
    <TextView
            android:text="@string/moeda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/lbValor"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:textSize="24sp" android:textColor="?attr/colorAccent" android:layout_marginTop="84dp"
            app:layout_constraintTop_toBottomOf="@+id/tbAutonomia"/>
    <TextView
            android:text="@string/valor_padrao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lbValor" app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:textSize="24sp" android:textColor="?attr/colorAccent" android:layout_marginTop="84dp"
            app:layout_constraintTop_toBottomOf="@+id/tbAutonomia"/>
    <Button
            android:text="@string/calcular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btCalcular"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:background="?attr/colorPrimary"
            app:layout_constraintHorizontal_bias="1.0" android:textColor="?attr/colorBackgroundFloating"
            android:elevation="5dp" android:layout_marginTop="148dp"
            app:layout_constraintTop_toBottomOf="@+id/tbAutonomia"/>
    <Switch
            android:text="@string/ida_e_volta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/swIdaEVolta" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/tbAutonomia" android:textColor="@android:color/darker_gray"
            android:switchPadding="10dp"/>
</android.support.constraint.ConstraintLayout>